restore support for Java 8